--- a/Games/TBOI/index.html
+++ b/Games/TBOI/index.html
@@ -26,7 +26,7 @@
     container.appendChild(player);
     player.style.cssText = 'width:100%; height: 100%;';
     player.style.display = 'block';
-    player.load("https://nice-pain.github.io/games/TBOI/The%20Binding%20of%20Isaac.swf").then(() => {
+    player.load("https://fungi-a.github.io/funnystuff/Games/TBOI/The%20Binding%20of%20Isaac.swf").then(() => {
       window.parent.postMessage({ type: 'ruffleready' }, '*');
     });
 }
