--- a/Games/Mike Tyson's Punch Out/index.html
+++ b/Games/Mike Tyson's Punch Out/index.html
@@ -2,6 +2,12 @@
     <head>
         <title>Mike Tyson's Punch Out</title>
         <style>
+        .ejs-controls {
+            display: none !important;
+        }
+
+
+
             body, html {
                 margin: 0;
                 padding: 0;
