--- a/Games/Mike Tyson's Punch Out/index.html
+++ b/Games/Mike Tyson's Punch Out/index.html
@@ -20,7 +20,7 @@
             EJS_startOnLoaded = true;
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "MTsPO.nes";
-              EJS_buttons = {
+            EJS_Buttons = {
                 playPause: { visible: false },
                 restart: { visible: false },
                 mute: { visible: false },
