Removed most buttons

--- a/Games/Mike Tyson's Punch Out/index.html
+++ b/Games/Mike Tyson's Punch Out/index.html
@@ -20,6 +20,26 @@
             EJS_startOnLoaded = true;
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "MTsPO.nes";
+            EJS_Buttons = {
+                playPause: { visible: false },
+                restart: { visible: false },
+                mute: { visible: false },
+                settings: { visible: false },
+                fullscreen: { visible: false },
+                saveState: { visible: false },
+                loadState: { visible: false },
+                screenRecord: { visible: false },
+                gamepad: { visible: false },
+                cheat: { visible: false },
+                volume: { visible: false },
+                saveSavFiles: { visible: false },
+                loadSavFiles: { visible: false },
+                quickSave: { visible: false },
+                quickLoad: { visible: false },
+                screenshot: { visible: false },
+                cacheManager: { visible: false },
+                exitEmulation: { visible: false }
+            };
         </script>
         <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
